Port MezzConfig GUI to Minecraft 26.1.2 on its own branch